<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_backdrop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundedImageBottom"
        tools:src="@drawable/img_spider_man_backdrop" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_poster"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:shapeAppearanceOverlay="@style/RoundedImage"
        tools:srcCompat="@drawable/img_spider_man_poster" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/Text.SemiBold"
        android:layout_marginHorizontal="16dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_poster"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        tools:text="@string/dummy_title" />

    <TextView
        android:id="@+id/textView"
        style="@style/Text.Medium"
        android:layout_marginTop="16dp"
        android:text="@string/about_movie"
        app:layout_constraintStart_toStartOf="@+id/iv_poster"
        app:layout_constraintTop_toBottomOf="@id/guideline2" />

    <TextView
        android:id="@+id/textView2"
        style="@style/Text.Medium"
        android:layout_marginTop="16dp"
        android:text="@string/overviews"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_overview"
        style="@style/Text.Regular"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="@string/dummy_overview" />

    <TextView
        android:id="@+id/textView3"
        style="@style/Text.Medium"
        android:layout_marginTop="8dp"
        android:text="@string/release_date"
        app:layout_constraintStart_toStartOf="@+id/tv_overview"
        app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

    <TextView
        android:id="@+id/textView4"
        style="@style/Text.Medium"
        android:layout_marginTop="8dp"
        android:text="@string/average_rating"
        app:layout_constraintStart_toStartOf="@+id/tv_release_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

    <TextView
        android:id="@+id/textView5"
        style="@style/Text.Medium"
        android:layout_marginStart="100dp"
        android:text="@string/rate_count"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/tv_rate_count"
        style="@style/Text.Regular"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:text="@string/dummy_rate_count" />

    <TextView
        android:id="@+id/textView6"
        style="@style/Text.Medium"
        android:layout_marginTop="8dp"
        android:text="@string/popularity"
        app:layout_constraintStart_toStartOf="@+id/tv_average_rating"
        app:layout_constraintTop_toBottomOf="@+id/tv_average_rating" />

    <TextView
        android:id="@+id/tv_popularity"
        style="@style/Text.Regular"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:text="@string/dummy_popularity" />

    <TextView
        android:id="@+id/tv_release_date"
        style="@style/Text.Regular"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="@string/dummy_release_date" />

    <TextView
        android:id="@+id/tv_average_rating"
        style="@style/Text.Regular"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:text="@string/dummy_average_rating" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />
</androidx.constraintlayout.widget.ConstraintLayout>