<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:paddingBottom="16dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView2"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/CircleImage"
        app:srcCompat="@drawable/img_profile" />

    <TextView
        android:id="@+id/tv_title2"
        style="@style/Text.Medium"
        android:layout_marginStart="16dp"
        android:paddingHorizontal="8dp"
        android:textColor="@color/white_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/dummy_name" />

    <TextView
        android:id="@+id/tv_title4"
        style="@style/Text.Medium"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        android:textColor="@color/green_2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:text="@string/dummy_rating" />

    <TextView
        android:id="@+id/tv_title3"
        style="@style/Text.Regular"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="4"
        android:paddingHorizontal="8dp"
        android:textColor="@color/white_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/tv_title2"
        tools:text="@string/dummy_review" />

</androidx.constraintlayout.widget.ConstraintLayout>